Fixed text to be more centered by removing margin from the letter spacing

--- a/src/components/style/_heading.scss
+++ b/src/components/style/_heading.scss
@@ -27,24 +27,27 @@
 }
 
 .heading-container {
-  color: $White;
-  text-transform: uppercase;
   position: absolute;
-  text-align: center;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin-left: 15px;
-  .heading-main {
-    display: block;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 30px;
-  }
-  .heading-sub {
-    display: block;
-    font-size: 20px;
-    font-weight: 400;
-    letter-spacing: 30px;
+  .heading-texts {
+    color: $White;
+    text-transform: uppercase;
+    text-align: center;
+    .heading-main {
+      display: block;
+      font-size: 60px;
+      font-weight: 400;
+      letter-spacing: 35px;
+      margin-right: -32px;
+    }
+    .heading-sub {
+      display: block;
+      font-size: 20px;
+      font-weight: 700;
+      letter-spacing: 34px;
+      margin-right: -32px;
+    }
   }
 }
